--- a/app/src/main/res/layout/onboard_view.xml
+++ b/app/src/main/res/layout/onboard_view.xml
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Use VID"
+        android:text="Use vendor thing ID"
         android:id="@+id/textSwitch"
         android:layout_alignTop="@+id/switchThingIDType"
         android:layout_toRightOf="@+id/switchThingIDType"
