--- a/app/src/main/res/layout/onboard_view.xml
+++ b/app/src/main/res/layout/onboard_view.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editTextThingId"
+        android:singleLine="true"
         android:layout_below="@+id/textThingId"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
