--- a/app/src/main/res/layout/info_view.xml
+++ b/app/src/main/res/layout/info_view.xml
@@ -22,13 +22,11 @@
         android:layout_alignParentStart="true"
         android:layout_margin="10dp"
         >
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/listViewInfo"
-            android:entries="@array/info_contents"
-            >
-        </ListView>
+        <Button android:id="@+id/logout_button" style="?android:textAppearanceSmall"
+            android:layout_width="match_parent" android:layout_height="wrap_content"
+            android:layout_marginTop="16dp" android:text="@string/action_logout"
+            android:textStyle="bold" />
+
     </ScrollView>
 
 </RelativeLayout>
