--- a/app/src/main/res/layout/commands_view.xml
+++ b/app/src/main/res/layout/commands_view.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Commands in the Thing: {thing ID}"
+        android:text="Commands in the Thing: ${thingID}"
         android:id="@+id/textCommands"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
