--- a/app/src/main/res/layout/info_view.xml
+++ b/app/src/main/res/layout/info_view.xml
@@ -34,20 +34,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:layout_width="50dip"
+                        android:layout_width="45dip"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Owner"
                         android:id="@+id/textOwnerCaption"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textSize="12sp"
                         android:text="---"
                         android:id="@+id/textOwner"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         />
                 </TableRow>
                 <!-- Target -->
@@ -55,20 +55,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:layout_width="50dip"
+                        android:layout_width="45dip"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceSmall"
                         android:text="Target"
                         android:id="@+id/textTargetCaption"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:textSize="12sp"
                         android:text="---"
                         android:id="@+id/textTarget"
-                        android:layout_margin="10dp"
+                        android:layout_margin="5dp"
                         />
                 </TableRow>
             </TableLayout>
