supported creating command

--- a/app/src/main/res/layout/activity_create_command.xml
+++ b/app/src/main/res/layout/activity_create_command.xml
@@ -1,5 +1,12 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/fragment"
-    android:name="com.kii.iotcloudsample.fragments.CreateCommandFragment"
-    tools:layout="@layout/create_command_view" android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:id="@+id/container"/>
+
+</LinearLayout>
