--- a/app/src/main/res/layout/states_view.xml
+++ b/app/src/main/res/layout/states_view.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textState"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Current State of Thing: {ThingID}"
-        android:id="@+id/textState"
+        android:text="Current State of Thing: ${thingID}"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
