allow you to choose action when creating command

--- a/app/src/main/res/layout/create_command_view.xml
+++ b/app/src/main/res/layout/create_command_view.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
-    <TextView
+    <CheckBox
+        android:id="@+id/checkboxPower"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Power"
-        android:id="@+id/textPower"
+        android:checked="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="20dp"
@@ -15,20 +16,21 @@
         />
 
     <Switch
+        android:id="@+id/switchPower"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/switchPower"
-        android:layout_below="@id/textPower"
+        android:layout_below="@id/checkboxPower"
         android:layout_alignParentLeft="true"
         android:layout_margin="10dp"
         />
 
-    <TextView
+    <CheckBox
+        android:id="@+id/checkboxBrightness"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Brightness: 0"
-        android:id="@+id/textBrightness"
+        android:checked="true"
         android:layout_below="@+id/switchPower"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="20dp"
@@ -36,53 +38,54 @@
         />
 
     <SeekBar
+        android:id="@+id/seekBarBrightness"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBarBrightness"
-        android:layout_below="@+id/textBrightness"
+        android:layout_below="@+id/checkboxBrightness"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_margin="10dp"
         />
 
-    <TextView
+    <CheckBox
+        android:id="@+id/checkboxColor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Color"
-        android:id="@+id/textColor"
+        android:checked="true"
         android:layout_below="@+id/seekBarBrightness"
         android:layout_alignParentLeft="true"
         android:layout_margin="10dp"
         />
 
     <TextView
+        android:id="@+id/textR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="R: 0"
-        android:id="@+id/textR"
-        android:layout_below="@+id/textColor"
+        android:layout_below="@+id/checkboxColor"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="20dp"
         />
 
     <SeekBar
+        android:id="@+id/seekBarR"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBarR"
         android:layout_toRightOf="@+id/textR"
         android:layout_alignTop="@+id/textR"
         android:max="255"
         />
 
     <TextView
+        android:id="@+id/textG"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="G: 0"
-        android:id="@+id/textG"
         android:layout_below="@+id/seekBarR"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
@@ -90,20 +93,20 @@
         />
 
     <SeekBar
+        android:id="@+id/seekBarG"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBarG"
         android:layout_toRightOf="@+id/textR"
         android:layout_alignTop="@+id/textG"
         android:max="255"
         />
 
     <TextView
+        android:id="@+id/textB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="B: 0"
-        android:id="@+id/textB"
         android:layout_below="@+id/seekBarG"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
@@ -111,20 +114,21 @@
         />
 
     <SeekBar
+        android:id="@+id/seekBarB"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBarB"
         android:layout_toRightOf="@+id/textB"
         android:layout_alignTop="@+id/textB"
         android:max="255"
         />
 
-    <TextView
+    <CheckBox
+        android:id="@+id/checkboxColorTemperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Color temperature: 0"
-        android:id="@+id/textColorTemperature"
+        android:checked="true"
         android:layout_below="@+id/seekBarB"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="20dp"
@@ -132,19 +136,19 @@
         />
 
     <SeekBar
+        android:id="@+id/seekBarColorTemperature"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBarColorTemperature"
-        android:layout_below="@+id/textColorTemperature"
+        android:layout_below="@+id/checkboxColorTemperature"
         android:layout_alignParentLeft="true"
         android:layout_margin="10dp"
         />
 
     <Button
+        android:id="@+id/buttonSendCommand"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Send Command"
-        android:id="@+id/buttonSendCommand"
         android:layout_below="@+id/seekBarColorTemperature"
         android:layout_alignParentLeft="true"
         android:layout_margin="10dp"
