--- a/app/src/main/res/layout-v11/activity_create_trigger.xml
+++ b/app/src/main/res/layout-v11/activity_create_trigger.xml
@@ -3,11 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <View   android:id="@+id/horizontal_line"
+    <View
+        android:id="@+id/horizontal_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
-        android:layout_above="@+id/wizard_button_bar"/>
+        android:layout_above="@+id/wizard_button_bar" />
 
     <!-- Layout for wizard controls -->
     <LinearLayout
@@ -15,25 +16,26 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        >
+        android:layout_alignParentBottom="true">
+
         <Button
             android:id="@+id/wizard_previous_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            />
+            style="?android:attr/borderlessButtonStyle" />
+
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@android:color/darker_gray"
-            />
+            android:background="@android:color/darker_gray" />
+
         <Button
             android:id="@+id/wizard_next_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            />
+            style="?android:attr/borderlessButtonStyle" />
     </LinearLayout>
 
     <com.kii.iotcloudsample.fragments.wizard.NonSwipeableViewPager
@@ -42,5 +44,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/horizontal_line"/>
-
 </RelativeLayout>
