impelmented showing command detail

--- a/app/src/main/res/layout/create_command_view.xml
+++ b/app/src/main/res/layout/create_command_view.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Power"
+        android:textStyle="bold"
         android:checked="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -30,6 +31,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Brightness: 0"
+        android:textStyle="bold"
         android:checked="true"
         android:layout_below="@+id/switchPower"
         android:layout_alignParentLeft="true"
@@ -53,6 +55,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Color"
+        android:textStyle="bold"
         android:checked="true"
         android:layout_below="@+id/seekBarBrightness"
         android:layout_alignParentLeft="true"
@@ -65,6 +68,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="R: 0"
+        android:textStyle="bold"
         android:layout_below="@+id/checkboxColor"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
@@ -86,6 +90,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="G: 0"
+        android:textStyle="bold"
         android:layout_below="@+id/seekBarR"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
@@ -107,6 +112,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="B: 0"
+        android:textStyle="bold"
         android:layout_below="@+id/seekBarG"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
@@ -128,6 +134,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Color temperature: 0"
+        android:textStyle="bold"
         android:checked="true"
         android:layout_below="@+id/seekBarB"
         android:layout_alignParentLeft="true"
