--- a/app/src/main/res/layout/create_trigger_command_view.xml
+++ b/app/src/main/res/layout/create_trigger_command_view.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Power"
+        android:textStyle="bold"
         android:checked="true"
         android:layout_below="@id/textTitle"
         android:layout_marginTop="10dp"
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Brightness: 0"
+        android:textStyle="bold"
         android:checked="true"
         android:layout_below="@+id/switchPower"
         android:layout_alignParentLeft="true"
@@ -64,6 +66,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Color"
+        android:textStyle="bold"
         android:checked="true"
         android:layout_below="@+id/seekBarBrightness"
         android:layout_alignParentLeft="true"
@@ -76,6 +79,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="R: 0"
+        android:textStyle="bold"
         android:layout_below="@+id/checkboxColor"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
@@ -97,6 +101,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="G: 0"
+        android:textStyle="bold"
         android:layout_below="@+id/seekBarR"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
@@ -118,6 +123,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="B: 0"
+        android:textStyle="bold"
         android:layout_below="@+id/seekBarG"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
@@ -139,6 +145,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Color temperature: 0"
+        android:textStyle="bold"
         android:checked="true"
         android:layout_below="@+id/seekBarB"
         android:layout_alignParentLeft="true"
