--- a/app/src/main/res/layout/create_trigger_when_view.xml
+++ b/app/src/main/res/layout/create_trigger_when_view.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="When"
+        android:textStyle="bold"
         android:layout_below="@+id/textTitle"
         android:layout_alignParentLeft="true"
         android:layout_marginTop="10dp"
