--- a/app/src/main/res/layout/onboard_view.xml
+++ b/app/src/main/res/layout/onboard_view.xml
@@ -15,6 +15,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Thing ID"
+                android:textStyle="bold"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -37,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Thing Password"
+                android:textStyle="bold"
                 android:layout_below="@+id/editTextThingId"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -62,6 +64,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Vender Thing ID"
+                android:textStyle="bold"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -84,6 +87,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Thing Password"
+                android:textStyle="bold"
                 android:layout_below="@+id/editTextVenderThingId"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -107,6 +111,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Thing Type"
+                android:textStyle="bold"
                 android:layout_below="@+id/editTextVenderThingPassword"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
