--- a/app/src/main/res/layout/trigger_detail_view.xml
+++ b/app/src/main/res/layout/trigger_detail_view.xml
@@ -29,6 +29,24 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
                 />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Enabled"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                />
+            <Switch
+                android:id="@+id/switchTriggerEnabled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                />
+
             <android.support.v7.widget.CardView
                 android:id="@+id/cardCommand"
                 android:layout_width="match_parent"
