--- a/app/src/main/res/layout/onboard_view.xml
+++ b/app/src/main/res/layout/onboard_view.xml
@@ -10,15 +10,11 @@
         <LinearLayout android:id="@+id/onboard_with_id_form" android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical">
             <TextView
-                android:id="@+id/textThingId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Thing ID"
                 android:textStyle="bold"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
             <EditText
@@ -26,22 +22,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:layout_below="@+id/textThingId"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
 
             <TextView
-                android:id="@+id/textThingPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Thing Password"
                 android:textStyle="bold"
-                android:layout_below="@+id/editTextThingId"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
             <EditText
@@ -50,24 +39,17 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:layout_below="@+id/textThingPassword"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
         </LinearLayout>
         <LinearLayout android:id="@+id/onboard_with_vender_id_form" android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical">
             <TextView
-                android:id="@+id/textVenderThingId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Vender Thing ID"
                 android:textStyle="bold"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
             <EditText
@@ -75,22 +57,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:layout_below="@+id/textVenderThingId"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
 
             <TextView
-                android:id="@+id/textVenderThingPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Thing Password"
                 android:textStyle="bold"
-                android:layout_below="@+id/editTextVenderThingId"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
             <EditText
@@ -99,23 +74,15 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:ems="10"
-                android:layout_below="@+id/textVenderThingPassword"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
 
             <TextView
-                android:id="@+id/textThingType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Thing Type"
                 android:textStyle="bold"
-                android:layout_below="@+id/editTextVenderThingPassword"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
             <EditText
@@ -123,45 +90,201 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:singleLine="true"
-                android:layout_below="@+id/textThingType"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
                 android:layout_margin="10dp"
                 />
         </LinearLayout>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonOnboard"
+
+    <RelativeLayout
+        android:id="@+id/onboard_operation_form"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Onboard"
+        android:layout_height="match_parent"
         android:layout_below="@+id/onboard_form"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_margin="10dp"
-        />
+        android:layout_gravity="center_horizontal">
+        <Button
+            android:id="@+id/buttonOnboard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Onboard"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_margin="10dp"
+            />
+        <Switch
+            android:id="@+id/switchThingIDType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/buttonOnboard"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_margin="10dp" />
+        <TextView
+            android:id="@+id/textSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Use vendor thing ID"
+            android:layout_alignTop="@+id/switchThingIDType"
+            android:layout_toRightOf="@+id/switchThingIDType"
+            android:layout_toEndOf="@+id/switchThingIDType"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            />
+    </RelativeLayout>
 
-    <Switch
-        android:id="@+id/switchThingIDType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonOnboard"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_margin="10dp" />
 
-    <TextView
-        android:id="@+id/textSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Use vendor thing ID"
-        android:layout_alignTop="@+id/switchThingIDType"
-        android:layout_toRightOf="@+id/switchThingIDType"
-        android:layout_toEndOf="@+id/switchThingIDType"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
-        />
+    <ScrollView
+        android:id="@+id/onboarded_form"
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:visibility="gone">
+        <LinearLayout android:layout_width="match_parent"
+            android:layout_height="wrap_content" android:orientation="vertical">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical|left"
+                android:drawableLeft="@drawable/ic_speaker_phone_black_36dp"
+                android:drawablePadding="6dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Onboarded"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Thing ID"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:id="@+id/textThingId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Vender Thing ID"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:id="@+id/textVenderThingId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Thing Type"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:id="@+id/textThingType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Vender"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:id="@+id/textVender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Product Name"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:id="@+id/textProductName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Firmware Version"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:id="@+id/textFirmwareVersion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Lot"
+                android:textStyle="bold"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="20dp"
+                />
+            <TextView
+                android:id="@+id/textLot"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <Button
+                android:id="@+id/buttonOnboardOther"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Onboard with other thing"
+                android:layout_margin="20dp"
+                />
+
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
