supports push notification

--- a/app/src/main/res/layout/info_view.xml
+++ b/app/src/main/res/layout/info_view.xml
@@ -25,55 +25,63 @@
         <LinearLayout android:id="@+id/onboard_with_vender_id_form" android:layout_width="match_parent"
             android:layout_height="wrap_content" android:orientation="vertical">
 
-
-            <TableLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-                <!-- Owner -->
-                <TableRow
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="45dip"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Owner"
-                        android:textStyle="bold"
-                        android:id="@+id/textOwnerCaption"
-                        android:layout_margin="5dp"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:text="---"
-                        android:id="@+id/textOwner"
-                        android:layout_margin="5dp"
-                        />
-                </TableRow>
-                <!-- Target -->
-                <TableRow
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_width="45dip"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Target"
-                        android:textStyle="bold"
-                        android:id="@+id/textTargetCaption"
-                        android:layout_margin="5dp"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="12sp"
-                        android:text="---"
-                        android:id="@+id/textTarget"
-                        android:layout_margin="5dp"
-                        />
-                </TableRow>
-            </TableLayout>
+            <!-- Owner -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Owner"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                />
+            <TextView
+                android:id="@+id/textOwner"
+                android:text="---"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <!-- Target -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Target"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                />
+            <TextView
+                android:id="@+id/textTarget"
+                android:text="---"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
+            <!-- InstallationID -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Installation ID"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="10dp"
+                />
+            <TextView
+                android:id="@+id/textInstallationID"
+                android:text="---"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="20dp"
+                />
 
             <Button android:id="@+id/logout_button" style="?android:textAppearanceSmall"
                 android:layout_width="match_parent" android:layout_height="wrap_content"
