--- a/app/src/main/res/layout/commands_view.xml
+++ b/app/src/main/res/layout/commands_view.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Command"
+        android:textAllCaps="false"
         android:layout_below="@id/textCommands"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -28,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Refresh"
+        android:textAllCaps="false"
         android:layout_alignBottom="@+id/buttonNewCommand"
         android:layout_toRightOf="@+id/buttonNewCommand"
         android:layout_toEndOf="@+id/buttonNewCommand" />
