--- a/app/src/main/res/layout/trigger_list_item.xml
+++ b/app/src/main/res/layout/trigger_list_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
@@ -21,6 +23,19 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:textSize="10sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            tools:text="1234567890-abcdefghi"
+            />
     </LinearLayout>
+    <TextView
+        android:id="@+id/right_text"
+        android:width="90dp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="right"
+        android:gravity="center_vertical"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        tools:text="ServerCode"
+        />
 </LinearLayout>
