--- a/app/src/main/res/layout/triggers_view.xml
+++ b/app/src/main/res/layout/triggers_view.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Trigger"
+        android:textAllCaps="false"
         android:layout_below="@id/textTriggers"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -28,6 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Refresh"
+        android:textAllCaps="false"
         android:layout_alignTop="@id/buttonNewTrigger"
         android:layout_toRightOf="@+id/buttonNewTrigger"
         android:layout_toEndOf="@+id/buttonNewTrigger"
